# LSTM_forward_eigen

./: CMakeLists.txt  README.md  lstm_model.cpp  lstm_model.h  main.cpp  predict_model.cpp  util.cpp  util.h
